# AI_Planning_Assignment

./: README.md  domain.pddl
Task1/: domain.pddl
Task2/: instace2_domain_without_numFluents_29_08.pddl  instace2_domain_without_numFluents_cleaned.pddl  instance1_domain.pddl  instance1_problem.pddl  instance2_domain.pddl  instance2_domain_new_types_31_08.pddl  instance2_domain_numeric.pddl  instance2_domain_vincenzo_31_08.pddl  instance2_domain_without_numFluents.pddl  instance2_numeric_domain.pddl  instance2_numeric_problem.pddl  instance2_problem.pddl  istance2_FinalProblem.pddl  istance2_easyProblem.pddl
Task2/Planner/ASP/: how_to_run
Task2/Planner/ASP/PDDL/Instance1/: instance1_problem.pddl
Task2/Planner/ASP/PDDL/Instance1_FF/: instance1_domain.pddl  instance1_problem.pddl
Task2/Planner/ASP/PDDL/Instance2/: instance2_easyProblem.pddl
Task2/Planner/ASP/PDDL/Instance2_FF/: instance2_domain.pddl  istance2_FinalProblem.pddl
Task2/Planner/ASP/results/: instance1Astar_problem.txt  instance1FF_problem.pddl  instance2Astar_finalProblem.txt  instance2FF_easyProblem.txt  instance2FF_finalProblem.txt  test.txt
Task2/Planner/ASP/src/fr/uga/pddl4j/examples/asp/Instance1_ASP/: ASP.java  FortugnoGrecoPrestaHeuristic.java
Task2/Planner/ASP/src/fr/uga/pddl4j/examples/asp/Instance2_ASP/: ASP.java  CheckerBoxContent.java  Node.java
Task3/: domain.pddl  domain_with_occupational_logic.pddl  numeric_domain.pddl  numeric_problem.pddl  problem.pddl  problemHard.pddl
Task3/3.1/: numeric_problem.pddl
Task3/3.2/: How to run.txt
Task3/3.2/src/robotic_planning/: CMakeLists.txt
Task3/3.2/src/robotic_planning/launch/: plansys2_msl.py
Task3/3.2/src/robotic_planning/plans/: popfplan.txt
Task3/3.2/src/robotic_planning/src/: deliver_to_location_action_node.cpp  deliver_to_workstation_action_node.cpp  empty_box_location_action_node.cpp  empty_box_workstation_action_node.cpp  fill_box_from_location_action_node.cpp  fill_box_from_workstation_action_node.cpp  move_action_node.cpp  pick_up_from_location_action_node.cpp  pick_up_from_workstation_action_node.cpp
Task3/31/: domain.pddl  numeric_problem.pddl  problem.pddl
Task3/32/: How to run.txt
Task3/32/robotic_planning/: CMakeLists.txt  package.xml
Task3/32/robotic_planning/launch/: commands  plansys2_msl.py
Task3/32/robotic_planning/pddl/: problem.pddl
Task3/32/robotic_planning/src/: deliver_to_location_action_node.cpp  deliver_to_workstation_action_node.cpp  empty_box_location_action_node.cpp  empty_box_workstation_action_node.cpp  fill_box_from_location_action_node.cpp  fill_box_from_workstation_action_node.cpp  move_action_node.cpp  pick_up_from_location_action_node.cpp  pick_up_from_workstation_action_node.cpp
Task3/32/src/robotic_planning/: package.xml
Task3/32/src/robotic_planning/launch/: commands
Task3/32/src/robotic_planning/pddl/: domain.pddl  problem.pddl
Task3/32/src/robotic_planning/plans/: opticplan.txt  tfdplan.txt
Task3/32/src/robotic_planning/src/: deliver_to_location_action_node.cpp  deliver_to_workstation_action_node.cpp  empty_box_location_action_node.cpp  empty_box_workstation_action_node.cpp  fill_box_from_location_action_node.cpp  fill_box_from_workstation_action_node.cpp  move_action_node.cpp  pick_up_from_location_action_node.cpp  pick_up_from_workstation_action_node.cpp
