<?xml version="1.0"?>

<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

	<name>robotic_planning</name>

	<version>0.0.1</version>

	<description>Task 3.2 of AI assignment 2023-2024</description>

	<maintainer email="aiguy@aiugy.it">stduenti</maintainer>

	<license>Apache License, Version 2.0</license>

	<buildtool_depend>ament_cmake</buildtool_depend>


	<depend>rclcpp</depend>

	<depend>rclcpp_action</depend>

	<depend>plansys2_msgs</depend>

	<depend>plansys2_executor</depend>
    

	<exec_depend>plansys2_bringup</exec_depend>

	<exec_depend>plansys2_terminal</exec_depend>

	<test_depend>ament_lint_common</test_depend>

	<test_depend>ament_lint_auto</test_depend>

	<test_depend>ament_cmake_gtest</test_depend>

	<export>

		<build_type>ament_cmake</build_type>

	</export>

</package>
